[package]
name = "h2-support"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"

[dependencies]
h2 = { path = "../..", features = ["unstable"] }

bytes = "0.4.7"
env_logger = "0.5.9"
futures-preview = { version = "0.3.0-alpha.17", features = ["compat", "io-compat", "async-await", "nightly"] }
futures01 = { version = "0.1", package = "futures" }
http = "0.1.5"
string = "0.2"
tokio-io = "0.1.6"
tokio-timer = "0.1.2"
pin-utils = "0.1.0-alpha.4"
